[package]
name = "tunnel-client"
version = "0.1.2"
edition = "2024"

[dependencies]
tunnel-protocol = { path = "../protocol" }

anyhow = "1.0"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1.44"
