[package]
name = "tunnel-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tunnel-protocol = { path = "../protocol" }
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
bytes = "1.0"
dashmap = "6.0"
futures = "0.3"
hmac = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
url = "2"
uuid = { version = "1.0", features = ["v4"] }
